--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,38 @@
-body {
+.bannerImage {
+  position: relative;
+  background-image: url(/assets/img/banner.png);
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  padding-bottom: 250px 0px 200px; }
+
+.botonBanner--tratamientos {
+  border-radius: 4px;
+  border: 1px solid #FFFFFF;
+  outline: none;
   background-color: #FFFFFF; }
 
-.navBar {
-  width: 100%;
-  position: fixed;
-  z-index: 2; }
+.botonBanner--contacto {
+  border: 1px solid #FFFFFF;
+  border-radius: 4px;
+  outline: none;
+  background-color: transparent; }
 
-.navBar:hover {
-  background-color: #FFFFFF; }
+.botonSobreMi {
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  background-color: #616162; }
 
-.aboutMe__img {
-  border-radius: 70px; }
+.backgroundSobreMi {
+  background-color: #C5C5C5; }
 
-.treatments__card {
-  height: 375px;
-  width: 375px;
+.backgroundTratamientos {
   background-color: #FEE5BF; }
 
-.onlineBenefits__circles {
-  background-color: #FEE5BF;
-  height: 96px;
-  width: 96px;
-  border-radius: 100%; }
+.cardTratamiento {
+  color: #616162;
+  background-color: #E0B86D; }
+
+.circleFeature {
+  background-color: #E0B86D; }
