--- a/assets/scss/colors-styles.scss
+++ b/assets/scss/colors-styles.scss
@@ -3,38 +3,53 @@ $beigeoscuro: #E0B86D;
 $negro: #333333;
 $grisOscuro: #616162;
 $grisClaro: #F5F5F5;
+$grisClaro2: #C5C5C5;
 $blanco: #FFFFFF;
 
-body{
-    // background-color: #8EC5FC;
-    // background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
+.bannerImage{
+    position: relative;
+    background-image: url(/assets/img/banner.png);
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    padding-bottom: 250px 0px 200px;
+}
+
+.botonBanner--tratamientos{
+    border-radius: 4px ;
+    border: 1px solid $blanco;
+    outline: none;
     background-color: $blanco;
-    
 }
 
-.navBar{
-    width: 100%;
-    position: fixed;
-    z-index: 2;
+.botonBanner--contacto{
+    border: 1px solid $blanco;
+    border-radius: 4px ;
+    outline: none;
+    background-color: transparent;
 }
 
-.navBar:hover{
-    background-color: $blanco;
+.botonSobreMi{
+    border-radius: 4px ;
+    outline: none;
+    border:none;
+    background-color:$grisOscuro;
 }
 
-.aboutMe__img{
-    border-radius: 70px;    
+.backgroundSobreMi{
+    background-color:$grisClaro2;
 }
 
-.treatments__card{
-    height: 375px;
-    width: 375px;
+.backgroundTratamientos{
     background-color:$beigeClaro;
 }
 
-.onlineBenefits__circles{
-    background-color: $beigeClaro;
-    height:96px;
-    width: 96px;
-    border-radius:100%;
+.cardTratamiento{
+    color:$grisOscuro;
+    background-color:$beigeoscuro;
+}
+
+.circleFeature{
+    background-color:$beigeoscuro;
 }
