--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .bannerImage {
   position: relative;
-  background-image: url(./assets/img/banner.png);
+  background-image: url(../assets/img/banner.png);
   min-height: 100vh;
   background-size: cover;
   background-position: center;
